unpackaged/main/default/objects/pro_OCR_Document__c/pro_OCR_Document__c.object-meta.xml
<CustomObject>
    <description>FT - 31/07/20223 - Created by Prodigy</description>
    <label>OCR Document</label>
    <nameField>
        <displayFormat>OCR-{0000}</displayFormat>
        <label>OCR Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCR Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>