unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OCR Documents</relationshipLabel>
    <relationshipName>OCR_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>