unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Class_Model__c.field-meta.xml
<CustomField>
    <fullName>pro_Class_Model__c</fullName>
    <description>FT 31/07/2023 - Created by Prodigy</description>
    <label>Class Model</label>
    <length>75</length>
    <type>Text</type>
</CustomField>