unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Consignee__c.field-meta.xml
<CustomField>
    <fullName>pro_Consignee__c</fullName>
    <description>FT - 31/07/223 - Created by Prodigy</description>
    <label>Consignee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>