unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Document__c.field-meta.xml
<CustomField>
    <fullName>pro_Document__c</fullName>
    <description>FT - Created by Prodigy</description>
    <label>Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>