unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Document_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Document_Date__c</fullName>
    <description>FT - 31/07/2023 - Created by prodigy</description>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>