unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Document_Total__c.field-meta.xml
<CustomField>
    <fullName>pro_Document_Total__c</fullName>
    <label>Document Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>