unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>pro_Error_Message__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>