unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_file_c__c.field-meta.xml
<CustomField>
    <fullName>pro_file_c__c</fullName>
    <label>File Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>