unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Instruction__c.field-meta.xml
<CustomField>
    <fullName>pro_Instruction__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Payable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>