unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_payable__c.field-meta.xml
<CustomField>
    <fullName>pro_payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Referance</label>
    <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
    <relationshipLabel>OCR Documents</relationshipLabel>
    <relationshipName>OCR_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>