unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Reference__c.field-meta.xml
<CustomField>
    <fullName>pro_Reference__c</fullName>
    <description>FT - 31/07/2023 - Created by Prodigy</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>