unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_Status__c.field-meta.xml
<CustomField>
    <fullName>pro_Status__c</fullName>
    <description>FT - Created by Prodigy - 31/07/2023</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Classification Inprogress</fullName>
            </value>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Extraction Inprogress</fullName>
            </value>
            <value>
                <fullName>Extracted</fullName>
            </value>
            <value>
                <fullName>Doc Created</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>