unpackaged/main/default/objects/pro_OCR_Document__c/fields/pro_URL__c.field-meta.xml
<CustomField>
    <fullName>pro_URL__c</fullName>
    <description>FT  - 31/07/2023 - Created by Prodigy</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>