unpackaged/main/default/objects/pro_OCR_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pro_URL__c</columns>
    <columns>pro_Status__c</columns>
    <columns>pro_Class_Model__c</columns>
    <columns>pro_Document_Number__c</columns>
    <columns>pro_Reference__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>pro_Consignee__c</columns>
    <columns>pro_Consignor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>